--- a/public/index.html
+++ b/public/index.html
@@ -15,14 +15,17 @@
   <script type="text/javascript" src="lib/jquery/dist/jquery.min.js"></script>
   <script type="text/javascript" src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="lib/angular/angular.min.js"></script>
-  <script type="text/javascript" src="lib/angular-animate/angular-animate.min.js"></script>
-  <script type="text/javascript" src="lib/angular-resource/angular-resource.min.js"></script>
   <script type="text/javascript" src="lib/angular-route/angular-route.min.js"></script>
+  <script type="text/javascript" src="lib/angular-resource/angular-resource.min.js"></script>
+  <script type="text/javascript" src="lib/angular-animate/angular-animate.min.js"></script>
 
   <!-- SCRIPTS -->
   <script type="text/javascript" src="js/main.js"></script>
 
   <!-- CONTROLLERS -->
   <script type="text/javascript" src="js/controllers/PedidosControllers.js"></script>
+
+  <!-- SERVICES -->
+  <script type="text/javascript" src="js/services/services.js"></script>
 </body>
 </html>
