socket.io enserido e jogando para database cozinha

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
 
 
   <!-- BIBLIOTECAS -->
+  <script src="/socket.io/socket.io.js"></script>
   <script type="text/javascript" src="lib/jquery/dist/jquery.min.js"></script>
   <script type="text/javascript" src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="lib/angular/angular.min.js"></script>
@@ -28,5 +29,9 @@
 
   <!-- SERVICES -->
   <script type="text/javascript" src="js/services/services.js"></script>
+
+  <script>
+    var socket = io();
+  </script>
 </body>
 </html>
