pedidos, cozinha e entrega integrando com site

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
 
   <!-- CONTROLLERS -->
   <script type="text/javascript" src="js/controllers/PedidosControllers.js"></script>
+  <script type="text/javascript" src="js/controllers/SiteController.js"></script>
 
   <!-- SERVICES -->
   <script type="text/javascript" src="js/services/services.js"></script>
