mudando layout para materialize

--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,9 @@
   <!-- SERVICES -->
   <script type="text/javascript" src="js/services/services.js"></script>
 
+  <!-- DIRECTIVES -->
+  <script type="text/javascript" src="js/directives/directives.js"></script>
+
   <script>
     var socket = io();
   </script>
