--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
 
   <!-- SCRIPTS -->
   <script type="text/javascript" src="js/main.js"></script>
+  <script type="text/javascript" src="js/scripts.js"></script>
 
   <!-- CONTROLLERS -->
   <script type="text/javascript" src="js/controllers/PedidosControllers.js"></script>
