--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
   <script type="text/javascript" src="js/controllers/PedidosControllers.js"></script>
   <script type="text/javascript" src="js/controllers/SiteController.js"></script>
   <script type="text/javascript" src="js/controllers/ProdutosController.js"></script>
+  <script type="text/javascript" src="js/controllers/LoginController.js"></script>
 
   <!-- SERVICES -->
   <script type="text/javascript" src="js/services/services.js"></script>
