--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Nápoles Pizzaria</title>
-  <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css">
+  <!-- <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css"> -->
   <link rel="stylesheet" href="lib/materialize/materialize.min.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
